welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:8: error: not found: value d
	}else if(d10 > 0 && d !=){
                            ^